--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "cors": "^2.8.5",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
